--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,17 +47,19 @@
 
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" />
-        <activity android:name=".HomeActivity" />
-        <activity android:name=".NearbyActivity" />
-        <activity android:name=".ChatActivity" />
-        <activity android:name=".MeActivity" />
-        <activity android:name=".LoginActivity" >
+            android:label="@string/app_name" >
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
 
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
+        </activity>
+        <activity android:name=".HomeActivity" />
+        <activity android:name=".NearbyActivity" />
+        <activity android:name=".ChatActivity" />
+        <activity android:name=".MeActivity" />
+        <activity android:name=".LoginActivity" >
+
     </activity>
         <activity android:name=".RegisterActivity" />
         <activity android:name=".FirstLoginActivity" />
