--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.aoge.skillexchange">
 
     <!-- To auto-complete the email text field in the login form with the user's emails -->
+
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
@@ -47,29 +48,31 @@
 
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
 
         </activity>
         <activity android:name=".HomeActivity" />
         <activity android:name=".NearbyActivity" />
         <activity android:name=".ChatActivity" />
         <activity android:name=".MeActivity" />
-        <activity android:name=".LoginActivity" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-    </activity>
+        <activity android:name=".LoginActivity" />
         <activity android:name=".RegisterActivity" />
-        <activity android:name=".FirstLoginActivity" />
-        <activity android:name=".OthersIfoActivity" />
-        <activity android:name=".DetailActivity" />
-        <activity android:name=".MsgActivity"></activity>
-
-        <activity android:name=".GetLocationActivity">
+        <activity android:name=".FirstLoginActivity" >
 
         </activity>
+        <activity android:name=".OthersIfoActivity" />
+        <activity android:name=".DetailActivity" />
+        <activity android:name=".MsgActivity" >
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+        </activity>
+        <activity android:name=".GetLocationActivity" />
+        <activity android:name=".LaunchActivity" />
+        <activity android:name=".EditUserIfoActivity" />
+        <activity android:name=".ChooseHeadActivity"></activity>
     </application>
 
 </manifest>
